# benchmark

./: .dockerignore  .gitignore  Dockerfile  README.md  TABLE_GET.md  TABLE_POST.md  WRK.md  rest_test.rest
docker/: README.md  clean.sh  docker-compose.yml  mongo-init.js  stack.yml
go/: README.md  db.go  go.mod  go.sum  handlers.go  main.go  models.go  routes.go
java/: README.md
java/kotlin_spring/: build.gradle.kts
java/kotlin_spring/src/main/resources/: application.properties
java/openjdk17_spring/: pom.xml
java/openjdk17_spring/src/main/resources/: application.properties
java/openjdk_spring/: pom.xml
java/openjdk_spring/src/main/resources/: application.properties
java/quarkus/: pom.xml
java/quarkus-reactive/: pom.xml
java/quarkus-reactive/src/main/docker/: Dockerfile.jvm
java/quarkus/src/main/docker/: Dockerfile.legacy-jar
java/quarkus/src/main/resources/: application.properties
java/webflux/: HELP.md  pom.xml
node/: README.md  package-lock.json  package.json
node/expressjs/: package-lock.json  package.json
node/expressjs/src/: main.js
node/fasitify/: package-lock.json  package.json
node/fasitify/src/: main.js
node/fastify/: package-lock.json  package.json
node/fastify/src/: main.js
node/restana/: package-lock.json  package.json
node/restana/src/: db.js  handlers.js  main.js
node/src/: customers.js  handlers.js  main.js  router.js
rust/: Cargo.toml  README.md
rust/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
wrk/: customers.lua  exec.sh
wrk/report/: exec.sh  test.sh
(+44 files in other folders)
