[package]
name = "rust_mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = {version ="^0.3", features = ["compression"]}
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures = "^0.3"

[dependencies.mongodb]
version = "^2.3.0"
default-features = false
features = ["async-std-runtime"]

[profile.release]
opt-level = 3
